# worksheets

Worksheet3/: adder.cpp  adder.h  calc.cpp  hello.cpp
worksheet 6/1/: CMakeLists.txt  vtk_cube.cpp
worksheet 6/1-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Cube.sln  Cube.vcxproj  Cube.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
worksheet 6/1-build/Cube.dir/Debug/Cube.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
worksheet 6/1-build/Debug/: Cube.ilk
worksheet 6/2/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
worksheet 6/2-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  QtVTKExample.sln  QtVTKExample.vcxproj  QtVTKExample.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  qrc_icons.cpp  ui_mainwindow.h
worksheet 6/2-build/Debug/: QtVTKExample.ilk
worksheet 6/2-build/QtVTKExample.dir/Debug/QtVTKExample.tlog/: CL.command.1.tlog  (+8 more)
worksheet4/calc_cmake/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp  cmake_gen_mingw.bat
worksheet4/hello_cmake/: CMakeLists.txt
worksheet5/exercise1/: hello_qt.cpp
worksheet5/exercise2/: CMakeLists.txt
worksheet5/exercise3/: CMakeLists.txt
worksheet5/exercise4-9/: CMakeLists.txt  edititemdialog.cpp  edititemdialog.h  edititemdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockitem.cpp  stockitem.h  stockitemlistmodel.cpp  stockitemlistmodel.h
(+9 files in other folders)
